/**
* Generated by go-doudou v2.0.1.
* Don't edit!
*
* Version No.: v20221121
*/
syntax = "proto3";

package wordcloud_maker;
option go_package = "github.com/unionj-cloud/go-doudou-tutorials/wordcloud/wordcloud-maker/transport/grpc";



message MakePayload {
  // 文本文件公开下载链接
// text file public download url
  string src_url = 1 [json_name="srcUrl"];
  // 文本语言
// text language
  string lang = 2 [json_name="lang"];
  // 只取词频前Top个词
// only want Top frequent words
  int32 top = 3 [json_name="top"];
}

message MakeRpcResponse {
  // 词云图链接
// word cloud image url
  string data = 1 [json_name="data"];
}

service WordcloudMakerService {
  // Make 生成词云图接口
// make word cloud image
  rpc MakeRpc(MakePayload) returns (MakeRpcResponse);
}
